# baduilib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/baduilib/: array.h  baduilib.cpp  baduilib.h  dialog.cpp  dialog.h  keyboard.cpp  keyboard.h  library.json  new_settings_renderer.cppo  settings.cpp  settings.h  settings_renderer.cpp  settings_types.h  split.h  stack_viewer.h
src/: main.cpp
